Update SuddenrunPlaylistRevisionService with updatePlaylist and tests